--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  /* box-decoration-break:clone; */
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-image:url("https://c0.wallpaperflare.com/preview/872/732/38/backlit-dawn-wallpaper-hd-wallpaper.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  margin-top: 0vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+h2{
+  text-align: center;
+  margin-top: 5vw;
+  
+}
+form,submiited-data{
+  margin: 20px;
+  text-align:center;
+  width: 50%;
+  height: 50%;
+  /* filter: none; */
+}
+.container label{
+  font-size: 25px;
+  font-weight: bold;
+}
+.container div input{
+  background: transparent;
+  border-style: none;
+  padding: 8px;
+  width:18vw ;
+  border-bottom: 1px solid ;
+
+}
+button{
+  align-items: center;
+  font-size: 20px;
+  padding: 8px;
+  width: 10vw;
+  margin-top: 3vw;
+  background-color: rgb(196,188,212);
+  /* border-style: none; */
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submitted-data{
+  border-left: 1px solid;
+  padding: 10vh;
+  padding-left: 20vh;
+  text-align: center;
+  font-size: 20px;
+  
+}
+.submitted-data h3{text-decoration: underline; margin: 3px;}
+.submitted-data img{
+  width: 50%;
+  margin: 3px;
+  border-radius: 50%;
+}
+.submitted-data p {
+  margin: 2px;
+}
+.submitted-data p span{
+  font-weight: bold;
 }
